--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -21,7 +21,7 @@ table{
   width: 500px;
   background: rgb(159, 77, 77);
   color: #fff;
-  border: 1px solid #000;
+  border: 1px solid #fff;
   tr{
     th{
       border: 1px solid;
